--- a/index.html
+++ b/index.html
@@ -72,11 +72,10 @@
             </ul>
           </li>
         </ul>
-        <!-- <i class="bi bi-list mobile-nav-toggle"></i> -->
       </nav>
 
     </div>
-  </header><!-- End Header -->
+  </header>
 
   <!-- ======= Cards Section ======= -->
   <section id="hero" class="d-flex align-items-center">
