--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
+      <a href="index.html" class="logo"><img src="assets/images/logo.png" alt="" class="img-fluid"></a>
 
       <h1 class="logo">Isibonelo Cloud</h1>
 
