--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
             <h4 class="title"><a target="blank" href="https://isibonelogroup456-my.sharepoint.com/:f:/g/personal/onlineadmin_isibonelogroup456_onmicrosoft_com/Eg1ECyBBX_FNsiGY76qSzmIBRJknm5kmA7MzHVACFg-kew">Development & <br> Asset Management</a></h4>
-            <p class="description">Projects and sites in development.<br> Site establishment, <br> Technical services and Feasibility studies.</p>
+            <p class="description">Projects and sites in development.<br> Site establishment, Technical <br>services and Feasibility studies.</p>
           </div>
         </div>
 
